# kafka-broker-rack-awareness-operator

./: LICENSE  README.md  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yaml  release.yaml
src/: charm.py  utils.py
tests/integration/: conftest.py  test_charm.py
tests/unit/: test_charm.py
